Fixed on  Restaurant week: Make background of page white like design. Add more spacing between text lines. Restaurant names and logos if added should link to the website link but should not show green hyperlink. Formatting should stay as is.

--- a/sites/all/themes/newhaven/css/styles.css
+++ b/sites/all/themes/newhaven/css/styles.css
@@ -189,6 +189,7 @@ article ul {list-style-type:disc; padding-left:20px; list-style-position:outside
 
 /* Website */
 html, body {min-height:100%; height:100%; background-color:#e6eee5;}
+body.node-type-restaurant-week { background-color: #FFFFFF; }
 .bg-img {position:absolute; top:0; left:0; height:100%; z-index:-1;}
 
 #top-header{
@@ -972,7 +973,9 @@ ul.pager li a{color:#2f2f2f;}
 .single-restaurant { background: url("../img/restaurant-bg.png") no-repeat; background-size: 100% 100%; min-height: 271px; margin-bottom: 20px; padding: 10px; }
 .single-restaurant img { width: 100%; max-width: 198px; height: auto; }
 .single-restaurant .restaurant-info { padding-left: 8px; }
+.restaurant-info > div { margin-bottom: 3px; }
 .restaurant-info .restaurant-name { font-size: 20px; font-weight: 600; }
+.restaurant-info .restaurant-name a { text-decoration: none; color: #333; }
 .restaurant-info .restaurant-cuisine { font-size: 16px; }
 .restaurant-info .restaurant-place, .restaurant-info .restaurant-open, .restaurant-info .restaurant-phone { font-size: 14px; }
 #restaurant-week-logos {max-width:972px; margin:0px auto; text-align:center; padding:0;}
